@@ -48,7 +48,7 @@
  {val: 'median(commande1,commande2)'},
  {val: 'time(value)'},
  ];
- autoCompleteAction = ['sleep', 'variable', 'scenario', 'stop', 'icon'];
+ autoCompleteAction = ['sleep', 'variable', 'scenario', 'stop', 'icon', 'say'];
 
  if (getUrlVars('saveSuccessFull') == 1) {
     $('#div_alert').showAlert({message: '{{Sauvegarde effectuée avec succès}}', level: 'success'});
