@@ -50,6 +50,7 @@
         <script src="core/php/getJS.php?file=3rdparty/highstock/highcharts-more.js"></script>
         <script src="core/php/getJS.php?file=3rdparty/jquery.utils/jquery.utils.js"></script>
         <script src="core/php/getJS.php?file=3rdparty/jquery.packery/jquery.packery.js"></script>
+        <script src="core/php/getJS.php?file=3rdparty/responsivevoices/responsivevoices.js"></script>
         <script src="core/php/getJS.php?file=core/js/jeedom.class.js"></script>
         <script src="core/php/getJS.php?file=core/js/private.class.js"></script>
         <script src="core/php/getJS.php?file=core/js/cmd.class.js"></script>
